--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" />
+
   <!-- Carousel  -->
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" /> -->
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -73,15 +75,32 @@
               </div>
             </div>
           </div>
-          <div class="bg-white rounded-xl shadow-lg px-5 py-4 d-lg-none d-block mb-4">
-            <h2 class="text-paragraph mb-3">Images</h2>
-            <div class="carouse w-full">
-              <div class="mx-4"><img src="./images/keisho1.png" alt="" class="w-260px h-154px object-cover"></div>
-              <div class="mx-4"><img src="./images/keisho2.png" alt="" class="w-260px h-154px object-cover"></div>
-              <div class="mx-4"><img src="./images/keisho3.png" alt="" class="w-260px h-154px object-cover"></div>
-              <div class="mx-4"><img src="./images/keisho2.png" alt="" class="w-260px h-154px object-cover"></div>
+
+          <!-- Carousel For Mobile View Start -->
+          <div class="bg-white rounded-xl shadow-lg px-4 py-4 mb-4 d-lg-none d-block">
+            <h2 class="text-paragraph pb-3">Images</h2>
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./images/keisho1.png" alt="" class="w-260px h-154px object-cover">
+                </div>
+                <div class="carousel-item">
+                  <img src="./images/keisho2.png" alt="" class="w-260px h-154px object-cover">
+                </div>
+                <div class="carousel-item">
+                  <img src="./images/keisho3.png" alt="" class="w-260px h-154px object-cover">
+                </div>
+              </div>
             </div>
+            <ol class="carousel-indicators">
+              <li class="" data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li class="" data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li class="" data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
           </div>
+
+          <!-- Carousel For Mobile View End -->
+
           <div class="bg-white rounded-xl shadow-lg px-5 py-4">
             <h2 class="text-paragraph mb-3">Examples</h2>
             <div class="border-left-5 border-color p-2 mb-3">
@@ -121,8 +140,42 @@
   </Section>
   <!-- Main Box End -->
 
+
   <!-- Carosel Start -->
   <Section class="max-w-1280px mx-auto mb-4 d-lg-block d-none">
+    <div class="contain-box">
+      <div class="bg-white rounded-xl shadow-lg  py-4">
+        <h2 class="text-paragraph pb-3 px-4">Images</h2>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="d-flex">
+                <div class="mx-4"><img src="./images/keisho1.png" alt="" class="w-260px h-154px object-cover"></div>
+                <div class="mx-4"><img src="./images/keisho2.png" alt="" class="w-260px h-154px object-cover"></div>
+                <div class="mx-4"><img src="./images/keisho3.png" alt="" class="w-260px h-154px object-cover"></div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="d-flex">
+                <div class="mx-4"><img src="./images/keisho1.png" alt="" class="w-260px h-154px object-cover"></div>
+                <div class="mx-4"><img src="./images/keisho2.png" alt="" class="w-260px h-154px object-cover"></div>
+                <div class="mx-4"><img src="./images/keisho3.png" alt="" class="w-260px h-154px object-cover"></div>
+              </div>
+            </div>
+          </div>
+          <ol class="carousel-indicators">
+            <li class="" data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li class="" data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li class="" data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+        </div>
+      </div>
+    </div>
+  </Section>
+
+
+  <!-- Carosel Start -->
+  <!-- <Section class="max-w-1280px mx-auto mb-4 d-lg-block d-none">
     <div class="contain-box">
       <div class="bg-white rounded-xl shadow-lg px-5 py-4">
         <h2 class="text-paragraph mb-3">Images</h2>
@@ -131,11 +184,10 @@
           <div class="mx-4"><img src="./images/keisho2.png" alt="" class="w-260px h-154px object-cover"></div>
           <div class="mx-4"><img src="./images/keisho3.png" alt="" class="w-260px h-154px object-cover"></div>
           <div class="mx-4"><img src="./images/keisho2.png" alt="" class="w-260px h-154px object-cover"></div>
-
         </div>
       </div>
     </div>
-  </Section>
+  </Section> -->
   <!-- Carosel End -->
 
   <!-- Experiance Button Start-->
@@ -185,9 +237,9 @@
     crossorigin="anonymous"></script>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     $(document).ready(function () {
       $('.carouse').slick({
         slidesToShow: 3,
@@ -224,7 +276,7 @@
         ]
       });
     });
-  </script>
+  </script> -->
 
 </body>
 
